--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,54 @@
 ---
+import Services from "../components/SevicesComponents/Services.astro";
+import About from "../components/AboutComponents/About.astro";
+import Navbar from "../components/NavbarComponents/Navbar.astro";
+import Portfolio from "../components/PortfolioComponents/Portfolio.astro";
+import Products from "../components/ProductsComponents/Products.astro";
+import PreFooter from "../components/PreFooterComponent/PreFooter.astro";
 
+
+
+import Courses from "../components/Courses.astro";
+
+import Contact from "../components/Contact.astro";
+
+import "../styles/global.css";
+import "../styles/sections.css";
+import "../styles/button.css";
+import "../styles/logo.css";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>My Launchpad</title>
+    <meta
+      name="description"
+      content="Welcome to the future. Building something amazing."
+    />
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+
+  <body>
+    <header class="navbar">
+      <Navbar />
+    </header>
+
+    <main>
+      <About />
+      <Services />
+      <Portfolio />
+      <Products />
+      <PreFooter />
+      
+      
+      
+    </main>
+
+    <footer class="footer">
+      <p>© 2025 mc2 (abv). all rights reserved</p>
+    </footer>
+
+    <script type="module" src="/scripts/navbar.js"></script>
+  </body>
 </html>
