cHANGES TO BE committed:

--- a/src/components/AboutComponents/About.astro
+++ b/src/components/AboutComponents/About.astro
@@ -7,38 +7,36 @@ import Card_Element from './Card_Element.astro';
 
 <section id="About" class="section">
   <div class="About-header">
-    <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-mcc-800 mb-6 animate-fade-in">Powering The Future With MC2 Technology</h1>
+    <h1>Powering The Future With <br>  <span>MC<sup>2</sup>  </span>  Technology</h1>
     <p>
       Pioneering advancements in robotics and artificial intelligence to solve
-      tomorrow's challenges today.
+      tomorrow's <br> challenges today.
     </p>
     </div>
 
     <div class="About-buttons">
-      <div class="nav-button">
+      
         <button class="contact-button">Get in Touch</button>
-      </div>
-      <div class="nav-button">
-        <button class="opposite-button">learn about us</button>
-      </div>
+        <button class="opposite-button">Learn about us</button>
+      
       <div></div>
     </div>
 
     <div class="About-Cards">
       <Card_Element
-      icon="/assets/img/robots.svg"
+      icon="/assets/img/aiBrain.svg"
       title="AI Solutions"
-      description="Intelligent software solutions built with advanced algorithms."
+      description="Intelligent software solutions built with advanced algorithms"
     />
     <Card_Element
-    icon="/assets/img/robots.svg"
-    title="AI Solutions"
-    description="Intelligent software solutions built with advanced algorithms."
+    icon="/assets/img/robot2.svg"
+    title="Advanced Robotics"
+    description="Cutting-edge robotic systems for industrial automation"
   />
   <Card_Element
-  icon="/assets/img/robots.svg"
-  title="AI Solutions"
-  description="Intelligent software solutions built with advanced algorithms."
+  icon="/assets/img/consult1.svg"
+  title="Expert Consultation"
+  description="Strategic technology guidance from industry experts"
 />
         
         
