--- a/src/components/NavbarComponents/Navbar.astro
+++ b/src/components/NavbarComponents/Navbar.astro
@@ -3,10 +3,10 @@ import "../../styles/components/NavbarComponents/Navbar.css";
 ---
  
 <!-- HTML -->
-<div class="Navbar">
+<div class="navbar">
   
     <div class="logo">
-      <img src="/assets/img/MCCLogo.png" alt="MC² Logo" class="logo-img" />
+      <a href="#top"><img src="/assets/img/MCCLogo.png" alt="MC² Logo" class="logo-img" /></a>
       <span class="sub-logo">Microelectronic Corporations</span>
     </div>
   
@@ -15,16 +15,16 @@ import "../../styles/components/NavbarComponents/Navbar.css";
 
 <nav class="nav-links">
   <ul>
-    <li><a href="#services">Services</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#products">Products</a></li>
-    <li><a href="#courses">Courses</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#About">Services</a></li>
+    <li><a href="#Services">About</a></li>
+    <li><a href="#Portfolio">Products</a></li>
+    <li><a href="#Products">Courses</a></li>
+    <li><a href="#PreFooter">Contact</a></li>
   </ul>
 </nav>
 
 
-    <div class="nav-button">
+    
   <button class="contact-button">Get in Touch</button>
-</div>
+
   </div>
