--- a/src/components/ProductsComponents/Products.astro
+++ b/src/components/ProductsComponents/Products.astro
@@ -14,28 +14,24 @@ import Card_Element from '../AboutComponents/Card_Element.astro';
     <div class="Products-Cards">
       <Card_Element
       image="/assets/img/test.avif"
-      title="AI Solutions"
+      title="MCC RoboArm X1"
       description="Intelligent software solutions built with advanced algorithms."
       button = "Learn More"
     />
     <Card_Element
     image="/assets/img/coding2.avif"
-    title="AI Solutions"
-    description="Intelligent software solutions built with advanced algorithms."
+    title="AI Vision System"
+    description="Computer vision system capable of real-time object detection and classification."
     button = "Learn More"
   />
   <Card_Element
   image="/assets/img/hardware.avif"
-  title="AI Solutions"
-  description="Intelligent software solutions built with advanced algorithms."
+  title="MicroController 5000"
+  description="High-performance microcontroller ideal for IoT applications and embedded systems."
   button = "Learn More"
 />
   </div>
 
-  <div style="  width: 100%;              /* fill the full width of the parent */
-  text-align: center;         /* push its child button to the left */ 
-  margin-top: 2rem;         /* optional spacing above the button */">
-  <button class="contact-button">Learn More</button>
-</div>
+
 </div>
 </section>
