--- a/src/components/SevicesComponents/Services.astro
+++ b/src/components/SevicesComponents/Services.astro
@@ -4,7 +4,7 @@ import Card_Element from '../AboutComponents/Card_Element.astro';
 ---
 <section id="Services" class="section">
 <div class="services-header">
-  <h2>Our Services <br /> </h2>
+  <h2 >Our Services <br> </h2>
   <p>
     Discover how our technological expertise can drive innovation and efficiency in your business operations.
   </p>
@@ -13,30 +13,32 @@ import Card_Element from '../AboutComponents/Card_Element.astro';
   
   <div class="services-Cards">
       <Card_Element
-      icon="/assets/img/robots.svg"
-      title="AI Solutions"
-      description="Intelligent software solutions built with advanced algorithms."
+      icon="/assets/img/smallrobot.svg"
+      title="Robotics Engineering"
+      description="Custom robotic solutions for manufacturing, logistics, and specialized applications tailored to your business needs."
     />
     <Card_Element
-    icon="/assets/img/robots.svg"
-    title="AI Solutions"
+    icon="/assets/img/AiDev.svg"
+    title="AI Development"
     description="Intelligent software solutions built with advanced algorithms."
   />
   <Card_Element
-  icon="/assets/img/robots.svg"
-  title="AI Solutions"
-  description="Intelligent software solutions built with advanced algorithms."
-/>
-  <Card_Element
-  icon="/assets/img/robots.svg"
-  title="AI Solutions"
-  description="Intelligent software solutions built with advanced algorithms."
+icon="/assets/img/training.svg"
+title="Technical Training"
+description="Comprehensive courses designed to empower your team with cutting-edge technical skills in robotics and AI."
 />
 <Card_Element
-icon="/assets/img/robots.svg"
-title="AI Solutions"
-description="Intelligent software solutions built with advanced algorithms."
+icon="/assets/img/products.svg"
+title="Hardware Products"
+description="State-of-the-art microelectronic components and robotic systems designed for performance and reliability."
 />
+
+  <Card_Element
+  icon="/assets/img/consult3.svg"
+  title="Consultation Services"
+  description="Expert guidance on implementing automation, AI, and robotic solutions within your existing infrastructure."
+/>
+
 
 
         
