--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@ html {
   
   body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
     background-color: white;
     line-height: 1.6;
   
@@ -16,7 +16,11 @@ html {
     font-family: ui-sans-serif, system-ui, sans-serif,
                  "Apple Color Emoji", "Segoe UI Emoji",
                  "Segoe UI Symbol", "Noto Color Emoji";
-    font-style: normal;
+    font-style:normal;
     font-weight: 400;
     color: rgba(30, 58, 138, 0.7);
+    
+    
+    
   }
+
