--- a/src/components/AboutComponents/Card_Element.astro
+++ b/src/components/AboutComponents/Card_Element.astro
@@ -28,8 +28,8 @@ const { icon, image, title, description,button } = Astro.props as Props;
   <div class="descrip">{description}</div>
 
   {button && (
-    <div class="nav-button">
-      <button class="contact-button">{description}</button>
-    </div>
-  )}4
+    
+      <button class="opposite-button">{button}</button>
+    
+  )}
 </div>
