--- a/src/components/PortfolioComponents/Portfolio.astro
+++ b/src/components/PortfolioComponents/Portfolio.astro
@@ -10,7 +10,7 @@ import CardElement from "../AboutComponents/Card_Element.astro";
     <div class="Portfolio-text">
       <h2>Innovative Solutions for a Connected World</h2>
       <p>
-        At MC2 (Microelectronic Corporations), we're dedicated to pushing the
+        At <span style="color:  rgb(37, 99, 235);">MC<sup>2</sup></span> (Microelectronic Corporations), we're dedicated to pushing the
         boundaries of what's possible with robotics and artificial intelligence.
         Founded by a team of experienced engineers and researchers, our mission
         is to create technology that enhances human capability and solves
