--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import "../styles/logo.css";
   </head>
 
   <body>
-    <header class="navbar">
+    <header >
       <Navbar />
     </header>
 
@@ -45,8 +45,8 @@ import "../styles/logo.css";
       
     </main>
 
-    <footer class="footer">
-      <p>© 2025 mc2 (abv). all rights reserved</p>
+    <footer class="footer" style="text-align: center;">
+      <p>© 2025 MC<sup>2</sup> (Microelectronic Corporations). All rights reserved.      </p>
     </footer>
 
     <script type="module" src="/scripts/navbar.js"></script>
