modified:   src/pages/index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,14 @@
 ---
 import Services from "../components/SevicesComponents/Services.astro";
 import About from "../components/AboutComponents/About.astro";
-import Navbar from "../components/NavbarComponents/Navbar.astro";
+import Navbar from "../components/navbarComponents/Navbar.astro";
 import Portfolio from "../components/PortfolioComponents/Portfolio.astro";
 import Products from "../components/ProductsComponents/Products.astro";
 import PreFooter from "../components/PreFooterComponent/PreFooter.astro";
 
 
 
-import Courses from "../components/Courses.astro";
 
-import Contact from "../components/Contact.astro";
 
 import "../styles/global.css";
 import "../styles/sections.css";
@@ -21,7 +19,7 @@ import "../styles/logo.css";
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>My Launchpad</title>
+    <title>MCC</title>
     <meta
       name="description"
       content="Welcome to the future. Building something amazing."
