--- a/src/components/modules/Products/Products.css
+++ b/src/components/modules/Products/Products.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);  /* ← exactly 3 columns */
   gap: 2rem;                               
-  width: 500px;
+  /* width: 200px; */
   /* Fixed width for the section */
   margin: 0 auto;
   
