--- a/src/components/modules/Services/Services.astro
+++ b/src/components/modules/Services/Services.astro
@@ -1,14 +1,18 @@
 ---
 import "./Services.css";
 import Card from "@ui/Card/Card.astro";
+import SectionHeader from "@nanoModules/sectionHeader/sectionHeader.astro";
+
 ---
+
 <section id="Services" class="section">
 <div class="services-header">
-  <h2 >Our Services <br> </h2>
-  <p>
-    Discover how our technological expertise can drive innovation and efficiency in your business operations.
-  </p>
-  </div>
+  <SectionHeader
+ heading = "Our Services"
+  paragraph = "Discover how our technological expertise can drive innovation and efficiency in your business operations."
+/>
+
+ 
 
   
   <div class="services-Cards">
