--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import SiteSections from "@modules";
-import "@styles";
+import "@styles/index.css"
 ---
 
 <html lang="en">
@@ -15,6 +15,7 @@ import "@styles";
   </head>
 
   <body>
+    
     <header>
       <SiteSections.Navbar />
     </header>
