--- a/src/components/modules/Portfolio/Portfolio.astro
+++ b/src/components/modules/Portfolio/Portfolio.astro
@@ -1,15 +1,17 @@
 ---
 import "./Portfolio.css";
 import Card from "@ui/Card/Card.astro";
+import Buttons from "@nanoModules/buttons/buttons.astro";
 ---
 
 <section id="Portfolio" class="section">
+  
   <div class="two-col-grid">
     <!-- first coloumn -->
     <div class="Portfolio-text">
       <h2>Innovative Solutions for a Connected World</h2>
       <p>
-        At <span style="color:  rgb(37, 99, 235);">MC<sup>2</sup></span> (Microelectronic Corporations), we're dedicated to pushing the
+        At (Microelectronic Corporations), we're dedicated to pushing the
         boundaries of what's possible with robotics and artificial intelligence.
         Founded by a team of experienced engineers and researchers, our mission
         is to create technology that enhances human capability and solves
@@ -32,11 +34,10 @@ import Card from "@ui/Card/Card.astro";
       />
     </div>  
 
-    <div class="nav-button">
-        <button class="contact-button">Learn More About Us</button>
-      </div>    
+   
 
     </div>
+    
 
     <!-- second coloumn -->
     <div class="photo-card">
@@ -46,4 +47,5 @@ import Card from "@ui/Card/Card.astro";
       <img src="/assets/img/pepper.avif" alt="Detail shot" class="photo-main" />
     </div>
   </div>
+
 </section>
