--- a/src/components/modules/Services/Services.css
+++ b/src/components/modules/Services/Services.css
@@ -1,4 +1,5 @@
 
+
 .services-header {
     
   /* Fixed width for the section */
@@ -34,7 +35,7 @@ line-height: 1.2;        /* tighten line height */
     display: grid;
     grid-template-columns: repeat(3, 1fr);  /* ← exactly 3 columns */
     gap: 2rem;                               
-    width: 900px;
+    width: 1200px;
     height: 400px;
     /* Fixed width for the section */
     margin: 0 auto;
@@ -54,7 +55,7 @@ line-height: 1.2;        /* tighten line height */
       grid-template-columns: 1fr;
     }
   }
-  .services-Cards .card-element .icon-circle {
+  .services-Cards .Card .icon-circle {
     position: absolute;
     top: 0;
     left: 0;
@@ -63,11 +64,15 @@ line-height: 1.2;        /* tighten line height */
     
     
   }
-  .card-element {
+  .Card {
     position: relative;
-  }  
+    box-shadow: rgba(37, 99, 235, 0.1) 0px 4px 16px, rgba(37, 99, 235, 0.1) 0px 8px 24px, rgba(37, 99, 235, 0.1) 0px 16px 56px;
+     box-shadow:
+    0 -23px  30px #2563eb,
+    0 2px -10px #2563eb; 
 
-  .services-Cards .card-element .title {
+  }  
+  .services-Cards .Card .title {
     padding-top: 2rem;
     
     
